# ap-autopilot

./: .gitignore  README.md  SPEC.md  pyproject.toml
data/: records.json
deploy/: .demo_state.json  capture.py  demo.py  gateway.py  gateway_lambda.py
deploy/runtime/: .gitignore  agent_runtime.py  requirements.txt
deploy/web/: template.html
scripts/: _awsclock.py  gen_docs.py  run_agent.py  run_extract.py  run_offline.py
src/ap_autopilot/: __init__.py  agent.py  agentcore.py  bedrock_models.py  extract.py  generate.py  match.py  metrics.py  model.py  pageimage.py  pipeline.py  tools.py  validate.py
tests/: test_extract.py  test_match.py  test_model.py  test_pipeline.py  test_validate.py
